--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -78,6 +78,17 @@ input {
   display: flex;
   flex-direction: column;
 
+  .address {
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 400;
+    font-size: .9em;
+    display: inline-flex;
+    margin-top: 10px;
+    padding: 0.75rem;
+    background-color: #f4f6f8;
+  }
+
   .balance {
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -102,7 +113,14 @@ input {
 
 .info {
   .private {
-    
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 400;
+    font-size: .9em;
+    display: inline-flex;
+    margin-top: 10px;
+    padding: 0.75rem;
+    background-color: #f4f6f8;
   }
   .public {
     text-transform: uppercase;
