--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -74,6 +74,10 @@ input {
   }
 }
 
+.buttonFake {
+  background-color: #974531 !important;
+}
+
 .wallet {
   display: flex;
   flex-direction: column;
@@ -132,4 +136,40 @@ input {
     padding: 0.75rem;
     background-color: #f4f6f8;
   }
+}
+
+
+// Modal-Component
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  min-width: 300px;
+}
+
+.modal-button {
+  padding: 10px 20px;
+  background-color: red;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.modal-button:hover {
+  background-color: darkred;
 }
